--- a/practice/style.css
+++ b/practice/style.css
@@ -7,9 +7,86 @@
     .icon-large{
          font-size: 30px;
     }
-    .p1{
-        margin: 30px;   
-        text-align: center;
-        color: aqua;
-    }
     
+    .he1{
+        font-weight: 600;
+        text-align: center;
+        font-size: 60px;
+      }
+      .he2{
+        width: 100%; 
+        margin-bottom: 30px;  
+        background-color: #031117; 
+        color: white; 
+        text-align: center; 
+        height: 200px; 
+        padding-top: 60px;
+
+      }
+      .he3{
+        color: white; 
+        text-align: center;
+      }
+      .p1{
+        text-align: center;
+        font-size: 25px;
+        color: grey;
+      }
+      .p2{
+       font-size: 20px;
+      }
+      .p3{
+        font-size: x-large; 
+        margin-left: 150px;
+      }
+      .card{
+        background-color: #F1F6F9;
+       margin: 10px;
+       padding: 0 10px;
+      height: 400px; 
+      border: #F1F6F9;
+      text-align: center;
+      }
+      .icon{
+        font-size: 60px;
+        color: #F7AD42;
+     }
+     .icon1{
+        margin-left: 160px;
+        font-size: 60px;
+        color: #F7AD42;
+     }
+     .bg{
+        background-color: #3D3D3D; 
+        padding: 80px;
+     }
+     .btn{
+        background-color: #E89C22;
+        justify-content: center;
+        margin-left: 520px;
+        width: 150px;
+        height: 50px;
+        border-radius: 0%;
+        padding: 10px;
+        font-size: larger;
+        color: white;
+      }
+      .bt{
+        background-color: #FBF3F1;
+        height: 300px;
+        width: 100%;
+        padding: 50px;
+       }
+       h3{
+        text-align: center;
+      }
+      body{
+        max-width: 100%;
+        overflow-x: hidden;
+    
+       }
+       .ib{
+        width: 380px; 
+        height: 300px; 
+        padding: 10px;
+       }
