--- a/practice/style.css
+++ b/practice/style.css
@@ -39,13 +39,14 @@
         font-size: x-large; 
         margin-left: 150px;
       }
-      .card{
+      .ca1{
         background-color: #F1F6F9;
        margin: 10px;
        padding: 0 10px;
       height: 400px; 
-      border: #F1F6F9;
+      border-color: #F1F6F9;
       text-align: center;
+      border-radius: 0%;
       }
       .icon{
         font-size: 60px;
@@ -86,7 +87,85 @@
     
        }
        .ib{
-        width: 380px; 
-        height: 300px; 
-        padding: 10px;
+        height: 100%;
+        width: 100%;
        }
+       .ca2{
+         height: 300px;
+         width: 350px;
+         border-radius: 0%;
+         margin: 10px 8px;
+         overflow: hidden;
+       }
+       .card-body{
+             width: 100%;
+             height: 100%;
+             position: absolute;
+             background-color: #F6A945;
+             opacity: 0.9;
+             left: -350px;
+             transition: 1s;
+             display: flex;
+             flex-direction: column;
+             justify-content: center;
+       }
+       .ca2:hover .card-body{
+        left: 0;
+       }
+       .ca1:hover{
+        border-color: #E89C22;
+        border-radius: solid;
+        border-width: 3px;
+      
+       }
+       .carousel-container {
+        width: 80%; /* Adjust width as needed */
+        margin: 0 auto;
+        position: relative;
+      }
+      
+      .slick-prev,
+      .slick-next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        font-size: 24px;
+        color: #000;
+      }
+      .slick-prev {
+        left: 10px;
+      }
+      .slick-next {
+        right: 10px;
+      }
+      .slick-dots {
+        position: absolute;
+        bottom: 10px;
+        width: 100%;
+        text-align: center;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+      .slick-dots li {
+        display: inline-block;
+        margin: 0 3px;
+      }
+      .carousel {
+        display: flex;
+        overflow-x: auto; /* Horizontal scroll for overflow */
+        scroll-snap-type: x mandatory; /* Snap to each image */
+      }
+      .slide {
+        flex: 0 0 auto; /* Disable flex grow and shrink */
+        scroll-snap-align: start; /* Snap to start of each image */
+        margin-right: 10px; /* Adjust spacing between images */
+      }
+      .slide img {
+        max-width: 100%; /* Ensure images don't exceed container width */
+        height: auto; /* Maintain aspect ratio */
+      }
