--- a/practice/style.css
+++ b/practice/style.css
@@ -11,6 +11,9 @@
     .he1{
         font-weight: 600;
         text-align: center;
+        justify-content: center;
+        align-items: center;
+        display: flex;
         font-size: 60px;
       }
       .he2{
@@ -122,8 +125,11 @@
         width: 80%; /* Adjust width as needed */
         margin: 0 auto;
         position: relative;
+        
       }
-      
+      .carousel-item img {
+        width: 100%;
+      }
       .slick-prev,
       .slick-next {
         position: absolute;
@@ -138,9 +144,11 @@
       }
       .slick-prev {
         left: 10px;
+        color : black;
       }
       .slick-next {
         right: 10px;
+        color : black;
       }
       .slick-dots {
         position: absolute;
@@ -158,6 +166,7 @@
       .carousel {
         display: flex;
         overflow-x: auto; /* Horizontal scroll for overflow */
+        overflow-y: hidden;
         scroll-snap-type: x mandatory; /* Snap to each image */
       }
       .slide {
@@ -169,3 +178,58 @@
         max-width: 100%; /* Ensure images don't exceed container width */
         height: auto; /* Maintain aspect ratio */
       }
+      .con{
+        position: relative;
+        height: 200px; /* Adjust height as needed */
+        width: 100%;
+      }
+      
+      .animated-text {
+        position: absolute;
+        bottom: 0;
+        opacity: 0;
+        animation: slide-up 1s forwards;
+      }
+      
+      @keyframes slide-up {
+        from {
+          bottom: -50px; /* Start position */
+          opacity: 0;
+        }
+        to {
+          bottom: 0; /* End position */
+          opacity: 1;
+        }
+      }
+      .whatsapp-float {
+        position: fixed;
+        bottom: 20px;
+        left: 20px;
+        z-index: 1000;
+    }
+    .whatsapp-icon {
+        position: left;
+        cursor: pointer;
+        transform: scaleX(1.3);
+    }
+    .ico {
+        color : white;
+        background-color: #4AE059;
+        font-size : 40px;
+    }
+    .tooltip {
+        position: absolute;
+        top: -30px; /* adjust as needed */
+        left: 130%; /* adjust as needed */
+        background-color: #4AE059;
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+    .whatsapp-icon:hover .tooltip {
+        visibility: visible;
+        opacity: 1;
+    }
