--- a/weather/style.css
+++ b/weather/style.css
@@ -1,19 +1,87 @@
 .card{
     width: 500px;
     height: 800px;
-    background-color: linear-gradient (135deg, #00feba, #5b548a);
-    color: #fff;
+    background: rgb(2,0,36);
+    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    box-shadow: 2px 2px 20px rgba(2,0,36,1);
     border-radius: 20px;
     text-align: center;
     padding: 20px;
-    margin: auto;
+    margin: 70px auto;
 }
 .search-bar{
-    border-radius: 40px;
-    background-color: rgb(235, 233, 233);
-    margin-right: 30px;
+    border-radius: 20px;
+    background-color: white;
+    margin-right: 20px;
+    height: 40px;
+    text-align: left;
+    padding-left: 20px;
+    font-size: 18px;
 }
-.search i{
-    background-color: rgb(235, 233, 233);
+
+.image{
+   margin: 50px auto;
+   height: 150px;
+   width: 150px;
+}
+.button{
+    border-radius: 50px;
+    background-color: white;
+    width: 35px;
+    height: 35px;
+}
+.button i{
+    font-size: 18px;
+}
+
+.image1{
+    margin:  auto;
+    height: 80px;
+    width: 80px;
+    margin-right: 10px;
+    color: white;
+   
+}
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+    margin-right: 20px;
+    } I
     
-}
+.details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    margin-top: 50px;
+ }
+ .hum{
+    margin-top: -20px;
+    color: white;
+
+ }
+ .win{
+    font-size: 19px;
+    margin-right: 8px;
+    font-weight: 500;
+    color: white;
+    
+ }
+ .weather{
+    display: none;
+ }
+ .error{
+    text-align: left;
+margin-left: 10px;
+font-size: 14px;
+margin-top: 10px;
+display: none;
+color: white;
+ }
+ .temp{
+    color: white;
+ }
+ .city{
+    color: white;
+ }
